make map shorter on mobile to avoid scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ h1 {
 h4 {
     color: #1A237E;
     font-weight: bold;
+    margin-top: 0;
 }
 
 .footer {
@@ -84,7 +85,7 @@ h4 {
 
 .map-row {
     position: relative;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 td.number {
@@ -148,8 +149,8 @@ B.btn-tweet:active, .btn-share:active, .btn-tweet:hover, .btn-share:hover, .btn-
         left: 170px;
     }
     #map {
-        border: 5px solid #fff
-        height: 400px;
+        border: 5px solid #fff;
+        height: 370px;
     }
     h1 {
         font-size: 60px;
